Added code comments.